# osiris

./: .gitignore  Cargo.toml  README.md  build.rs  osiris.jsonc  pyproject.toml
.github/workflows/: publish-pypi.yml  release-vscode.yml
docs/: architecture.md  cli.md  diagnostics.md  language-design.md  releasing.md  syntax.md
docs/local/zh/: syntax.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/scripts/: validate-manifest.mjs
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: osiris.tmLanguage.json
examples/: README.md  hello.osr
examples/tutorial/: app.osr  macros.osr  transforms.osr
oeps/: 0000-oep-process.md  0001-language-and-cli.md  0002-package-system.md  0003-standard-library.md  0004-documentation-and-tooling-presentation.md  README.md  oeps.jsonc  template.md
oeps/local/zh/: 0000-oep-process.md  0001-language-and-cli.md  0002-package-system.md  0003-standard-library.md  0004-documentation-and-tooling-presentation.md  README.md  template.md
schemas/: osiris.schema.json
scripts/: validate-compiler-wheel.py
src/: artifact.rs  ast.rs  backend.rs  cli.rs  compiler.rs  dependency.rs  diagnostic.rs  extension.rs  hir.rs  interface.rs  interface_graph.rs  jsonc.rs  lexer.rs  lib.rs  lsp.rs  lsp_stdio.rs  macro_expand.rs  main.rs  module_graph.rs  name.rs  printer.rs  project.rs  python_ast.rs  reader.rs  records.rs  semantic.rs  source.rs  source_map.rs  syntax.rs  types.rs
src/backend/python/: bindings.rs  control.rs  declarations.rs  expressions.rs  mod.rs  runtime.rs  setup.rs  support.rs  tests.rs
src/compiler/: mod.rs  support.rs  tests.rs  workspace.rs
src/compiler/hir/: metadata.rs  mod.rs  model.rs  operators.rs  patterns.rs  sequence_operations.rs  tests.rs  type_resolution.rs
src/compiler/macro/: collections.rs  declarations.rs  expander.rs  forms.rs  mod.rs  numbers.rs  tests.rs
src/compiler/module_graph/: dependency.rs  error.rs  io.rs  mod.rs  resolution.rs  tests.rs
src/compiler/tests/: cycles.rs  macros_and_records.rs  workspace.rs
src/compiler/workspace/: recover.rs
src/extensions/static_data/: analysis.rs  datum.rs  index.rs  mod.rs  record.rs  schema.rs  sidecar.rs  tests.rs
src/language/: core_forms.rs
src/language/ast/: lower.rs  mod.rs  model.rs  tests.rs
src/language/lexer/: mod.rs  tests.rs
src/language/name/: bindings.rs  lint.rs  mod.rs  tests.rs
src/language/reader/: datum.rs  identity.rs  mod.rs  parser.rs  tests.rs
src/language/source/: mod.rs  tests.rs
src/language/syntax/: equality.rs  metadata.rs  mod.rs  model.rs  tests.rs
src/language/types/: context.rs  mod.rs  model.rs  operators.rs  parse.rs  python.rs  tests.rs
src/lib/: tests.rs
src/osiris/: __init__.py  _core.pyi  prelude.py
src/osiris/prelude/: __init__.py  _sequence_consumers.py  _sequence_core.py  _sequence_eager.py  _sequence_partitions.py  _sequence_transforms.py  control.py  sequences.py
src/osiris_build/: __init__.py  _api.py  _common.py  _interface.py  _interface_records.py  _model.py  _project.py  _requirements.py  _sexpr.py  _sidecar.py  _support.py  _wheel.py  _wheel_archive.py
src/packaging/artifact/: mod.rs  tests.rs
src/packaging/dependency/: error.rs  lockfile.rs  mod.rs  model.rs  requirement.rs  resolve.rs  tests.rs
src/packaging/extension/: discovery.rs  io.rs  mod.rs  model.rs  support.rs  tests.rs  validation.rs
src/packaging/interface/: build.rs  common.rs  decode.rs  encode.rs  mod.rs  model.rs  rules.rs  tests.rs  validate.rs
src/packaging/interface_graph/: calculate.rs  graph.rs  mod.rs  model.rs  tests.rs
src/packaging/project/: config.rs  environment.rs  jsonc.rs  mod.rs  model.rs  paths.rs  tests.rs
src/stdlib/: api.rs  artifacts.rs  mod.rs  tests.rs
src/stdlib/artifacts/: source.rs
src/stdlib/macros/: comprehensions.osr  concurrency.osr  control.osr  recursion.osr
src/support/: hash.rs
src/tooling/cli/: build.rs  check.rs  compile.rs  docs.rs  expand.rs  extensions.rs  fmt.rs  init.rs  inspect.rs  io.rs  lsc.rs  mod.rs  registry.rs  run.rs  tests.rs  watch.rs  workspace.rs
src/tooling/documentation/: mod.rs  storage.rs  tests.rs
src/tooling/formatter/: mod.rs  tests.rs
src/tooling/lsp/: mod.rs  protocol.rs  rpc.rs  signature.rs  state.rs  symbols.rs  tests.rs  text.rs  workspace.rs
src/tooling/lsp_stdio/: mod.rs  tests.rs
src/tooling/printer/: mod.rs  tests.rs
src/tooling/semantic/: analysis.rs  metadata.rs  (+4 more)
stdlib/: README.md  osiris.jsonc  pyproject.toml
tests/: cli.rs  clojure_control_compile.rs  concurrency_compile.rs  condp_compile.rs  control_compile.rs  delay_compile.rs  distinct_compile.rs  dynamic_binding_compile.rs  empty_compile.rs  letfn_compile.rs  loop_compile.rs  parallel_compile.rs  predicates_compile.rs  private_function_compile.rs  resource_compile.rs  runtime_loader.py  sequence_combinations_compile.rs  sequence_compile.rs  test_clojure_prelude.py  test_control_runtime.py  test_dynamic_binding_runtime.py  test_lazy_edges.py  test_osiris_build.py  test_package_import.py  test_prelude.py  test_sequence_combinations.py  test_sequence_runtime.py  time_compile.rs  try_compile.rs
tests/cli/: compilation.rs  execution.rs  formatting.rs  initialization.rs  inspection.rs  protocol.rs  watching.rs
tests/control_compile/: assertions.rs  collections.rs  recursion_and_types.rs
(+163 files in other folders)
