[package]
name = "osiris"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
authors = ["MJ <tywf91@gmail.com>"]
description = "The osr Lisp compiler"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mjason/osiris"
repository = "https://github.com/mjason/osiris"
publish = false

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "osr"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
nom = "8.0"
pyo3 = { version = "0.29", optional = true, features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
toml_edit = "0.22"
unicode-normalization = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
