[package]
name = "osiris"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["MJ <tywf91@gmail.com>"]
description = "The osr Lisp compiler"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mjason/osiris"
repository = "https://github.com/mjason/osiris"
publish = false

[[bin]]
name = "osr"
path = "src/main.rs"

[dependencies]
nom = "8.0"
notify = "8.2"
oxilangtag = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
toml_edit = "0.22"
unicode-normalization = "0.1"
json5 = "0.4"
globset = "0.4"
async-graphql = { version = "=7.0.16", default-features = false }
async-graphql-derive = "=7.0.16"
async-graphql-parser = "=7.0.16"
async-graphql-value = "=7.0.16"
futures = "0.3"
libsql = { version = "=0.9.29", default-features = false, features = ["core"] }

[build-dependencies]
futures = "0.3"
json5 = "0.4"
libsql = { version = "=0.9.29", default-features = false, features = ["core"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
