[project]
name = "osiris-lang"
dynamic = ["version"]
description = "The osr Lisp compiler"
readme = "README.md"
license = "MIT"
authors = [
    { name = "MJ", email = "tywf91@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/mjason/osiris"
Repository = "https://github.com/mjason/osiris"
Issues = "https://github.com/mjason/osiris/issues"

[tool.maturin]
bindings = "bin"
module-name = "osiris"
python-packages = ["osiris", "osiris_build"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"
