[project]
name = "osiris-lang"
dynamic = ["version"]
description = "The osr Lisp compiler"
readme = "README.md"
license = "MIT"
authors = [
    { name = "MJ", email = "tywf91@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/mjason/osiris"
Repository = "https://github.com/mjason/osiris"
Issues = "https://github.com/mjason/osiris/issues"

[tool.maturin]
bindings = "bin"
module-name = "osiris_build"
python-packages = ["osiris_build"]
python-source = "src"
include = [
    { path = "stdlib/README.md", format = ["sdist", "wheel"] },
    { path = "stdlib/pyproject.toml", format = ["sdist", "wheel"] },
    { path = "stdlib/osiris.jsonc", format = ["sdist", "wheel"] },
    { path = "stdlib/uv.lock", format = ["sdist", "wheel"] },
    { path = "stdlib/src/**/*.osr", format = ["sdist", "wheel"] },
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "stdlib/**/*.osr" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"
